Refactor, split basic codes and jfx ones.