@@ -2,7 +2,6 @@ import java.io.FileOutputStream
 import java.util.zip.ZipOutputStream
 import java.util.zip.ZipFile
 
-
 buildscript {
     repositories { mavenCentral() }
 
@@ -44,66 +43,8 @@ tasks.compileJava {
     targetCompatibility = "8"
 }
 
-tasks.test {
-    jvmArgs("--illegal-access=deny")
-
-    listOf(
-        "javafx.graphics/com.sun.javafx.iio",
-        "javafx.graphics/com.sun.javafx.iio.common"
-    ).forEach { string ->
-        jvmArgs("--add-exports", "${string}=ALL-UNNAMED")
-    }
-
-    listOf(
-        "java.base/java.io",
-    ).forEach { string ->
-        jvmArgs("--add-opens", "${string}=ALL-UNNAMED")
-    }
-
-    println(jvmArgs)
-}
-
-tasks.create<Task>("generateModuleInfo") {
-    dependsOn(tasks.compileJava)
-    group = "build"
-
-    val outputFile = File(project.buildDir, "module-info/module-info.class")
-
-    doLast {
-        val cw = org.objectweb.asm.ClassWriter(0)
-        cw.visit(org.objectweb.asm.Opcodes.V9, org.objectweb.asm.Opcodes.ACC_MODULE, "module-info", null, null, null)
-
-        val mv = cw.visitModule("net.burningtnt.webp", 0, null)
-        mv.visitRequire("java.base", 0, null)
-        mv.visitRequire("javafx.graphics", org.objectweb.asm.Opcodes.ACC_STATIC, null)
-        mv.visitExport("net.burningtnt.webp.vp8l", 0)
-        mv.visitExport("net.burningtnt.webp.jfx", 0)
-        mv.visitEnd()
-
-        cw.visitEnd()
-
-        outputFile.parentFile.mkdirs()
-        outputFile.deleteOnExit()
-        outputFile.createNewFile()
-        outputFile.writeBytes(cw.toByteArray())
-    }
-}
-
-tasks.processResources {
-    dependsOn(tasks.getByName("generateModuleInfo"))
-
-    into("") {
-        from("${project.buildDir}/module-info/module-info.class") {
-        }
-    }
-}
-
 checkstyle {
     sourceSets = mutableSetOf()
-}
-
-tasks.test {
-    useJUnitPlatform()
 }
 
 tasks.withType<GenerateModuleMetadata> {
@@ -150,51 +91,16 @@ tasks.getByName("build") {
 
 dependencies {
     testImplementation(project)
-
-    testImplementation("org.apache.commons:commons-imaging:1.0-alpha3")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
-    testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
-    testImplementation("org.glavo:simple-png:0.3.0")
 }
 
 publishing {
     publications {
         create<MavenPublication>("maven") {
             groupId = project.group.toString()
-            artifactId = "SimpleWEBP"
+            artifactId = project.name
             version = project.version.toString()
 
             from(components["java"])
-        }
-    }
-}
-
-// Setup JavaFX
-run {
-    var classifer = when (kala.platform.Platform.CURRENT_PLATFORM.operatingSystem) {
-        kala.platform.OperatingSystem.LINUX -> "linux"
-        kala.platform.OperatingSystem.WINDOWS -> "win"
-        kala.platform.OperatingSystem.MACOS -> "mac"
-        else -> return@run
-    }
-
-    when (kala.platform.Platform.CURRENT_PLATFORM.architecture) {
-        kala.platform.Architecture.X86_64 -> {}
-        kala.platform.Architecture.X86 -> classifer += "-x86"
-        kala.platform.Architecture.AARCH64 -> classifer += "-aarch64"
-        kala.platform.Architecture.ARM -> if (classifer == "linux") classifer =
-            "linux-arm32-monocle" else return@run
-
-        else -> return@run
-    }
-
-    val modules = listOf("base", "graphics")
-
-    dependencies {
-        for (module in modules) {
-            compileOnly("org.openjfx:javafx-$module:17.0.2:$classifer")
-            testImplementation("org.openjfx:javafx-$module:17.0.2:$classifer")
         }
     }
 }
